--- a/C#/LaminariaCore-General/LaminariaCore-General.csproj
+++ b/C#/LaminariaCore-General/LaminariaCore-General.csproj
@@ -31,6 +31,9 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
+    <PropertyGroup>
+        <DocumentationFile>obj/Release/LaminariaCore_General.xml</DocumentationFile>
+    </PropertyGroup>
     <ItemGroup>
         <Reference Include="System" />
         <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
