--- a/C#/LaminariaCore-General/LaminariaCore-General.csproj
+++ b/C#/LaminariaCore-General/LaminariaCore-General.csproj
@@ -56,7 +56,7 @@
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="docs.md" />
+      <Content Include="README.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
