--- a/C#/LaminariaCore-Databases/UnitTesting/UnitTesting.csproj
+++ b/C#/LaminariaCore-Databases/UnitTesting/UnitTesting.csproj
@@ -12,6 +12,7 @@
         <AssemblyName>UnitTesting</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
