--- a/C#/LaminariaCore-Databases/LaminariaCore-Databases.csproj
+++ b/C#/LaminariaCore-Databases/LaminariaCore-Databases.csproj
@@ -48,7 +48,9 @@
         <Compile Include="sqlserver\SQLServerConnector.cs" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="docs\" />
+      <Content Include="docs\sqldatabasemanager-docs.md" />
+      <Content Include="docs\sqlserverconnector-docs.md" />
+      <Content Include="README.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
