Added endpoints for the reconnection and disconnection to the server and updated to v1.2.0

--- a/C#/LaminariaCore-Databases/LaminariaCore-Databases.csproj
+++ b/C#/LaminariaCore-Databases/LaminariaCore-Databases.csproj
@@ -49,7 +49,10 @@
         <Compile Include="sqlserver\SQLServerConnector.cs" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="README.md" />
+      <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="LaminariaCore-Databases.nuspec" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
