--- a/C#/LaminariaCore-Databases/LaminariaCore-Databases.nuspec
+++ b/C#/LaminariaCore-Databases/LaminariaCore-Databases.nuspec
@@ -14,6 +14,7 @@
     <tags>Utilitary Databases SQLServer</tags>
   </metadata>
   <files>
+    <file src="*\**" target="\" exclude="bin\**\*.*"/>
     <file src="*\**" target="\" exclude="UnitTesting\**\*.*"/>
 	<file src="..\..\icon.png"/>
 </files>
