--- a/C#/LaminariaCore-Winforms/LaminariaCore-Winforms.nuspec
+++ b/C#/LaminariaCore-Winforms/LaminariaCore-Winforms.nuspec
@@ -14,6 +14,7 @@
     <tags>Utilitary Winforms</tags>
   </metadata>
   <files>
+    <file src="*\**" target="\" exclude="bin\**\*.*"/>
     <file src="*\**" target="\" exclude="UnitTesting\**\*.*"/>
 	<file src="..\..\icon.png"/>
 </files>
