Updated the license in the composer.json file.

--- a/PHP/LaminariaCore-Databases/composer.json
+++ b/PHP/LaminariaCore-Databases/composer.json
@@ -2,7 +2,7 @@
     "name": "mrkelpy/laminariacore-databases",
     "description": "A utility library for connecting and managing databases in PHP",
     "type": "library",
-    "license": "MIT License",
+    "license": "MIT",
     "authors": [
         {
             "name": "MrKelpy"
