Fixed the static imports in the serverconnector, dev.

--- a/PHP/LaminariaCore-Databases/composer.json
+++ b/PHP/LaminariaCore-Databases/composer.json
@@ -11,5 +11,11 @@
     "minimum-stability": "dev",
     "require": {
         "ext-mysqli": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "LaminariaCore\\": "mysql/"
+        }
     }
+
 }
