--- a/C#/LaminariaCore-General/LaminariaCore-General.csproj
+++ b/C#/LaminariaCore-General/LaminariaCore-General.csproj
@@ -35,6 +35,7 @@
         <DocumentationFile>obj/Release/LaminariaCore_General.xml</DocumentationFile>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Microsoft.CSharp" />
         <Reference Include="System" />
         <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
           <HintPath>packages\System.CodeDom.7.0.0\lib\net462\System.CodeDom.dll</HintPath>
